--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.ts",
+  "main_": "test.ts",
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/register": "^7.13.16",
     "@palerock/annotate-js": "^1.2.42",
     "@palerock/express-annotate-js": "0.0.28",
+    "emailjs": "^3.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.0",
+    "svg-captcha": "^1.4.0",
+    "tencentcloud-sdk-nodejs": "^4.0.223",
     "typescript": "^4.3.2",
     "uuid": "^8.3.2"
   },
